# llvm-dl-optimizer

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
docs/: design.md  installation.md  usage.md
examples/: ActivationExample.cpp  CMakeLists.txt  ConvolutionExample.cpp  PoolingExample.cpp
include/Kernels/: Activation.h  Convolution.h  Pooling.h
include/Optimization/: AutoVectorization.h  DataLayoutTransform.h  LoopFusion.h
lib/Kernels/: Activation.cpp  Convolution.cpp  Pooling.cpp
lib/Optimization/: AutoVectorization.cpp  DataLayoutTransform.cpp  LoopFusion.cpp
scripts/: build.sh  run_tests.sh
src/: main.cpp
tests/:  CMakeLists.txt
tests/KernelTests/: ActivationTest.cpp  ConvolutionTest.cpp  PoolingTest.cpp
tests/OptimizationTests/: AutoVectorizationTest.cpp  DataLayoutTransformTest.cpp  LoopFusionTest.cpp
